WIP: adding support for single and multi-line comments

--- a/Rasp/TODO.txt
+++ b/Rasp/TODO.txt
@@ -1,10 +1,23 @@
 Doing:
+* Comments
+
+ > /*
+Lex error at line 1: Stray ) in program
+
+ > /* nada */ "surf"
+	Root {
+		Identifier("surf")
+
+	}
+Parse error at line 1: Variable "surf" not defined
+
 * Loops
 * Investigate stuff being left over in the stack
 
 Next:
-* Comments
+* Print line numbers associated with execution errors
 * User defined functions
+* Print stack traces for errors in functions?
 * Types
 * Types?
 
