Implementing logical AND, OR

--- a/Rasp/TODO.txt
+++ b/Rasp/TODO.txt
@@ -5,6 +5,8 @@ Doing:
 * SourceLocation(File, Line, Column?) rather than just line
 
 Known bugs / issues:
+* (*) returns 1
+* Short circuiting for &&, ||
 * Investigate stuff being left over in the stack
 
 Questions:
